Tweaked stylesheet ref

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <link rel="styleSheet" href="example.css" />
+    <link rel="styleSheet" href="style.css" />
   </head>
   <h1>main1</h1>
   <h2>main2</h2>
