--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <link rel="styleSheet" href="style.css" />
+    <link rel="styleSheet" href="styles.css" />
   </head>
   <body>
     <h1>main1</h1>
